--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
-ErrorDocument 404 http://getprojects.tech/template.html
+ErrorDocument 404 http://getprojects.tech/404.html
 ErrorDocument 401 http://getprojects.tech/401.html
 ErrorDocument 500 http://getprojects.tech/500.html
