--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Tipue search settings
 tipue_search:
-  include:
+  include: true
     pages: true
-  exclude:
+  exclude: true
     files: [search.html]
