--- a/extensions/themes+/v1.0.3/manifest.json
+++ b/extensions/themes+/v1.0.3/manifest.json
@@ -16,7 +16,8 @@
         "search", "storage"
     ],
     "background": {
-        "service_worker": "js/service.js"
+        "service_worker": "js/service.js",
+        "type": "module"
     },
 	"host_permissions": [
 		"https://buildwithkt.dev/*"
