--- a/extensions/themes+/v1.0.3/manifest.json
+++ b/extensions/themes+/v1.0.3/manifest.json
@@ -1,25 +1,21 @@
 {
-    "manifest_version": 3,
-    "author": "buildwithkt.dev",
-    "name": "Themes+ New Tab",
-    "version": "1.0.3",
-    "description": "Video wallpapers and customizable backgrounds for your new tab - plus tasks, notes, bookmarks, timers, and tab manager.",
-    "icons": {
-        "16": "icons/icon16.png",
-        "48": "icons/icon48.png",
-        "128": "icons/icon128.png"
-    },
-    "chrome_url_overrides": {
-        "newtab": "newtab.html"
-    },
-    "permissions": [
-        "search", "storage"
-    ],
-    "background": {
-        "service_worker": "js/service.js",
-        "type": "module"
-    },
-	"host_permissions": [
-		"https://buildwithkt.dev/*"
-	]
+	"manifest_version": 3,
+	"author": "buildwithkt.dev",
+	"name": "Themes+ New Tab",
+	"version": "1.0.3",
+	"description": "Video wallpapers and customizable backgrounds for your new tab - plus tasks, notes, bookmarks, timers, and tab manager.",
+	"icons": {
+		"16": "icons/icon16.png",
+		"48": "icons/icon48.png",
+		"128": "icons/icon128.png"
+	},
+	"chrome_url_overrides": {
+		"newtab": "newtab.html"
+	},
+	"permissions": ["search", "storage", "tabs"],
+	"background": {
+		"service_worker": "js/service.js",
+		"type": "module"
+	},
+	"host_permissions": ["https://buildwithkt.dev/*"]
 }
