Permission fix for default search engine

--- a/extensions/themes+/v1.0.5/manifest.json
+++ b/extensions/themes+/v1.0.5/manifest.json
@@ -20,7 +20,8 @@
 		"system.storage",
 		"bookmarks",
 		"alarms",
-		"notifications"
+		"notifications",
+		"search"
 	],
 	"background": {
 		"service_worker": "js/service.js",
